# l4proj-src

./: .gitignore  Dockerfile  ModelChecking.cabal  README.org  flake.nix  hModC.cabal  modelChecker.cabal  modelChecking.cabal
.github/workflows/: haskell.yml  hlint.yml
case_study/: pop3_ctl.hs  pop3_ltl.hs
src/: CTL.hs  CTL.org  CTLParser.hs  LTL.hs  LTLParser.hs  TransitionSystem.hs  dtmc.hs
test/: Properties.hs  Properties.org  Unit_Tests.hs  Unit_Tests.org
test/images/: fig6_11.tex
