cabal-version:   3.0
name:            hModC
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          Alistair Johnston
category:        Libraries
maintainer:      2560836j@student.gla.ac.uk
build-type:      Simple
synopsis: A basic model checker operating on explicit model representations.
description:
  A model checking library that operates on an adjacency matrix representation of a transition system.

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints 

library
  exposed-modules:
    CTL
    CTLParser
  build-depends:    
      base >= 4.14.1.0
    , parallel
    , parsec
  ghc-options:
    -threaded

  hs-source-dirs: src
  default-language: Haskell2010

test-suite property-tests 
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  other-modules:
    CTL
  build-depends:    
      base >= 4.14.1.0
    , QuickCheck >= 2.14.2
    , parallel
    , parsec

  hs-source-dirs:   src, test
  default-language: Haskell2010

test-suite unit-tests 
  type: exitcode-stdio-1.0
  main-is: Unit_Tests.hs
  other-modules:
    CTL
    CTLParser
  build-depends:    
      base >= 4.14.1.0
    , tasty
    , tasty-hunit
    , parallel
    , parsec

  hs-source-dirs:   src, test
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/ARLJohnston/l4proj-src
                    
