cabal-version:   3.0
name:            hModC
version:         2.1.0
license:         GPL-3.0-or-later
author:          Alistair Johnston
category:        Libraries
maintainer:      2560836j@student.gla.ac.uk
build-type:      Simple
synopsis: A basic model checker operating on explicit model representations.
description:
  A model checking library that operates on an adjacency matrix representation of a transition system.

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  exposed-modules:
    CTL
    CTLParser
    LTL
    TransitionSystem
  build-depends:
      base >= 4.14.1.0 && < 5
    , parallel
    , parsec
    , containers

  hs-source-dirs: src
  default-language: Haskell2010

test-suite property-tests
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  other-modules:
    CTL
    LTL
  build-depends:
      base >= 4.14.1.0
    , QuickCheck >= 2.14.2
    , parallel
    , parsec
    , containers

  hs-source-dirs: src, test
  default-language: Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: Unit_Tests.hs
  other-modules:
    CTL
    CTLParser
    LTL
    TransitionSystem
  build-depends:
      base >= 4.14.1.0
    , tasty
    , tasty-hunit
    , parallel
    , parsec
    , containers

  hs-source-dirs: src, test
  default-language: Haskell2010

executable pop3-ctl
  main-is: pop3_ctl.hs
  build-depends:
      base >= 4.14.1.0 && < 5
    , parallel
    , parsec
  other-modules:
      CTL
    , CTLParser
    , TransitionSystem
  hs-source-dirs: src, case_study
  default-language: Haskell2010

executable pop3-ltl
  main-is: pop3_ltl.hs
  build-depends:
      base >= 4.14.1.0 && < 5
    , parallel
    , parsec
    , containers
  other-modules:
      LTL
    , TransitionSystem
  hs-source-dirs: src, case_study
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/ARLJohnston/l4proj-src
