cabal-version:   3.0
name:            modelChecking
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          Alistair Johnston
maintainer:      2560836j@student.gla.ac.uk
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    
      base ^>= 4.17.2.0,
      QuickCheck ^>= 2.14.2,
      diagrams-lib,
      diagrams-svg,
      matrix ^>= 0.3.6.1,
      vector

    hs-source-dirs:   src
    default-language: Haskell2010
