cabal-version:   3.0
name:            modelChecking
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          Alistair Johnston
maintainer:      2560836j@student.gla.ac.uk
build-type:      Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints 

library
  exposed-modules:
    CTL
  build-depends:    
      base >= 4.14.1.0
    , matrix >= 0.3.6.1
    , vector
    , parallel
  hs-source-dirs: src
  default-language: Haskell2010

executable modelChecker
  import:           warnings
  main-is:          CTL.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:    
      base >= 4.14.1.0
    , diagrams-lib
    , diagrams-svg
    , matrix >= 0.3.6.1
    , vector
    , parallel

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite property-tests 
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  build-depends:    
      base >= 4.14.1.0
    , QuickCheck >= 2.14.2
    , matrix >= 0.3.6.1
    , vector
    , parallel

  hs-source-dirs:   src, test
  default-language: Haskell2010

test-suite unit-tests 
  type: exitcode-stdio-1.0
  main-is: Unit_Tests.hs
  build-depends:    
      base >= 4.14.1.0
    , matrix >= 0.3.6.1
    , tasty
    , tasty-hunit
    , vector
    , parallel

  hs-source-dirs:   src, test
  default-language: Haskell2010
